# conduit

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_package.sh  channel_examples.cpp  compile_commands.json  example.cpp  main.cpp
.github/workflows/: cmake.yml
build_package/: conduit_0.1.0-0_all.deb
build_package/conduit/DEBIAN/: control
build_package/conduit/usr/local/include/conduit/: continuation.hpp  coroutine.hpp  recursive_generator.hpp  source.hpp
build_package/conduit/usr/local/include/conduit/async/: await_if.hpp  coro.hpp  on_coro.hpp
build_package/conduit/usr/local/include/conduit/io/: resolve.hpp  write.hpp
build_package/conduit/usr/local/include/conduit/mem/: allocator.hpp
build_package/conduit/usr/local/include/conduit/util/: tag_types.hpp  unique_handle.hpp
compiler_bugs/: bug_report_gcc_package.md  detach_bug.cpp  order_of_return_object_bug.cpp
include/: await_promise_object.hpp  awaitable_callback.hpp  awaitable_reference.hpp  channel.hpp  channel_promise.hpp  common.hpp  concepts.hpp  generator.hpp  generator_promise.hpp  iterator.hpp  minimal_promise.hpp  promise_base.hpp  recursive_generator.hpp  suspend_maybe.hpp  tag_types.hpp  task.hpp  unique_handle.hpp
include/async/: await_if.hpp  callback.hpp  deref.hpp  future.hpp
include/conduit/: await_promise_object.hpp  channel.hpp  co_thread.hpp  co_void.hpp  common.hpp  concepts.hpp  continuation.hpp  coroutine.hpp  coroutine_queue.hpp  detached.hpp  future.hpp  gcc_coroutine  generator.hpp  iterator.hpp  optional_ref.hpp  recursive_generator.hpp  scheduler.hpp  source.hpp  stdlib_coroutine.hpp  tag_types.hpp  task.hpp  temporary_handle.hpp  unique_handle.hpp  void_coro.hpp
include/conduit/async/: await_if.hpp  callback.hpp  coro.hpp  deref.hpp  destroy.hpp  future.hpp  get_this_handle.hpp  immediate_value.hpp  jump.hpp  on_coro.hpp  on_suspend.hpp  suspend_and_destroy.hpp  suspend_invoke.hpp
include/conduit/fn/: bind.hpp  functional.hpp
include/conduit/io/: accept.hpp  connect.hpp  read.hpp  resolve.hpp  responses.hpp  write.hpp
include/conduit/mem/: allocator.hpp
include/conduit/mini/: README.md  channel.hpp  generator.hpp  task.hpp
include/conduit/mixin/: awaitable_parts.hpp  promise_parts.hpp  resumable.hpp
include/conduit/net/: accept.hpp  connect.hpp  read.hpp  resolve.hpp  write.hpp
include/conduit/promise/: channel.hpp  co_void.hpp  continuation.hpp  detached.hpp  future.hpp  generator.hpp  minimal.hpp  promise_base.hpp  recursive_generator.hpp  source.hpp  void_coro.hpp
include/conduit/util/: concepts.hpp  iterator.hpp  optional_ref.hpp  signal.hpp  stdlib_coroutine.hpp  tag_types.hpp  unique_awaitable.hpp  unique_handle.hpp
include/mini/: channel.hpp  generator.hpp  task.hpp
include/promise/: channel.hpp  future.hpp  generator.hpp  minimal.hpp  promise_base.hpp  recursive_generator.hpp
include/promises/: channel.hpp  channel_promise.hpp  generator_promise.hpp  minimal_promise.hpp  promise_base.hpp  recursive_generator.hpp  task.hpp
include/standalone/: coroutine.hpp
potential_compiler_bugs/: detach_bug.cpp
test/: count_allocs.hpp  run_test.hpp  test_coroutine_except_1.cpp  test_coroutine_except_2.cpp  test_coroutine_except_3.cpp  test_destroy.cpp  test_exception_2.cpp  test_exception_3.cpp  test_exception_4.cpp  test_future_except_1.cpp  test_on_suspend.cpp  test_resume_on_alternate_thread.cpp  test_source.cpp  test_source_except_1.cpp  test_task.cpp  test_task_except_1.cpp
tests/: run_test.hpp  test_coroutine.cpp  test_exception_1.cpp  test_exception_2.cpp  test_exception_3.cpp  test_future.cpp  test_generator.cpp  test_on_suspend.cpp  test_recursive_generator.cpp  test_suspend_invoke.cpp  test_task.cpp  tests.cpp
